--- a/geo-analysis/notebooks/soldhouse_prices_preprocessing.ipynb
+++ b/geo-analysis/notebooks/soldhouse_prices_preprocessing.ipynb
@@ -19,13 +19,93 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_13777/726232839.py:1: DtypeWarning: Columns (10,12,14,16,17,18,20,22,35,36) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_32631/726232839.py:1: DtypeWarning: Columns (10,12,14,16,17,18,20,22,35,36) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  sellprices_df = pd.read_csv(FULL_SOLD_HOUSE_PRICES)\n"
      ]
     }
    ],
    "source": [
     "sellprices_df = pd.read_csv(FULL_SOLD_HOUSE_PRICES)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Extract by zipcode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sellprices_df[sellprices_df[\"code_departement\"] == 69].to_csv(\"valeurs-foncieres-69.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['id_mutation', 'date_mutation', 'numero_disposition', 'nature_mutation',\n",
+       "       'valeur_fonciere', 'adresse_numero', 'adresse_suffixe',\n",
+       "       'adresse_nom_voie', 'adresse_code_voie', 'code_postal', 'code_commune',\n",
+       "       'nom_commune', 'code_departement', 'ancien_code_commune',\n",
+       "       'ancien_nom_commune', 'id_parcelle', 'ancien_id_parcelle',\n",
+       "       'numero_volume', 'lot1_numero', 'lot1_surface_carrez', 'lot2_numero',\n",
+       "       'lot2_surface_carrez', 'lot3_numero', 'lot3_surface_carrez',\n",
+       "       'lot4_numero', 'lot4_surface_carrez', 'lot5_numero',\n",
+       "       'lot5_surface_carrez', 'nombre_lots', 'code_type_local', 'type_local',\n",
+       "       'surface_reelle_bati', 'nombre_pieces_principales',\n",
+       "       'code_nature_culture', 'nature_culture', 'code_nature_culture_speciale',\n",
+       "       'nature_culture_speciale', 'surface_terrain', 'longitude', 'latitude'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sellprices_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1621\n",
+      "1622\n",
+      "574\n",
+      "1622\n",
+      "397\n",
+      "1622\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_rillieux = sellprices_df[sellprices_df[\"code_postal\"] == 69140]\n",
+    "\n",
+    "print(sum(df_rillieux[\"valeur_fonciere\"].notna()))\n",
+    "print(len(df_rillieux))\n",
+    "\n",
+    "\n",
+    "print(sum(df_rillieux[\"surface_reelle_bati\"].notna()))\n",
+    "print(len(df_rillieux))\n",
+    "\n",
+    "print(sum(df_rillieux[\"surface_terrain\"].notna()))\n",
+    "print(len(df_rillieux))\n"
    ]
   },
   {
@@ -123,7 +203,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
