--- a/lm-from-scratch/notebooks/bert.ipynb
+++ b/lm-from-scratch/notebooks/bert.ipynb
@@ -11,7 +11,7 @@
     "from lm_from_scratch.models.bert import BERT\n",
     "from lm_from_scratch.corpus.decision_corpus import DecisionCorpus\n",
     "import pandas as pd\n",
-    "from artefacts import TOKENIZER_PATH\n",
+    "from artifacts import TOKENIZER_PATH\n",
     "\n",
     "from tokenizers import Tokenizer\n",
     "from tokenizers.models import BPE\n",
@@ -22,7 +22,7 @@
     "\n",
     "VOCAB_SIZE = 15000\n",
     "N_SEGMENTS = 2\n",
-    "MAX_LEN = 128 # 512 # what is the maximum context length for predictions?\n",
+    "MAX_LEN = 20# 128 # 512 # what is the maximum context length for predictions?\n",
     "EMBED_DIM = 384 # 768\n",
     "N_LAYERS = 3\n",
     "ATTN_HEADS = 6 # 32 * 4 = 128\n",
@@ -201,7 +201,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_6337/765054496.py:11: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_4506/765054496.py:11: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -332,7 +332,7 @@
     "            masked_token_ids,\n",
     "            sentence_pair.type_ids,\n",
     "            np.concatenate([masked_tokens, [IGNORE_INDEX] * mask_padding]),\n",
-    "            np.concatenate([masked_positions, [CLS_TOKEN_ID] * mask_padding]),\n",
+    "            np.concatenate([masked_positions, [0] * mask_padding]),\n",
     "            sentence_pair.attention_mask,\n",
     "            is_next,\n",
     "        ]"
@@ -347,140 +347,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "token_ids             \n",
-      " tensor([[    0,    21,    18,   354,   312,   146,   253,    16,   296,   251,\n",
-      "           971,   120,    77,    11,   830,   146,   153,   360,  1002,    16,\n",
-      "            79,    11,   251,   948,   292,   146,   606,   120,   991,   153,\n",
-      "           253,    18,     1,    22,    18,   352,   373,   146,    77,    11,\n",
-      "           274,  1032,    16,   715,   636,    16,   161,   269,   146,   294,\n",
-      "           309,    16,   242,    79,    11,    90,    66,   871,   292,   484,\n",
-      "           146,   770,   183,   254,   360,   722,   995,   295,   176,   298,\n",
-      "            18,     1,     2,     2,     2,     2,     2,     2,     2,     2,\n",
-      "             2,     2,     2,     2,     2,     2,     2,     2,     2,     2,\n",
-      "             2,     2,     2,     2,     2,     2,     2,     2,     2,     2,\n",
-      "             2,     2,     2,     2,     2,     2,     2,     2,     2,     2,\n",
-      "             2,     2,     2,     2,     2,     2,     2,     2,     2,     2,\n",
-      "             2,     2,     2,     2,     2,     2,     2,     2],\n",
-      "        [    0,   157,    11,   151,  1051,   146,  2277,   295,   153,  3370,\n",
-      "           146,   533,  3470,   146,  3080,    16,   242,  4285,   120,    77,\n",
-      "            11,   760,    69,    11,  2347,   153,  1375,   157,    11,   242,\n",
-      "            66,  2998,   120,   533,  3470,    31,     1,   924,    77,    11,\n",
-      "           259,   703,    12,  1524,    17,   151,    17,  1355,    16,    28,\n",
-      "           635,   532,    13,   166,   194,  4304,    16,   183,   805,   811,\n",
-      "          9474,  1406,   161,    26,   635,  8126,    16,   153,  4291,  7078,\n",
-      "           161, 12387,    66,   708,   216,     7,  1721,   146,  3161,  5243,\n",
-      "           166,  7327,     7,  1830,   295,   216,  4939,  8703,    69,    11,\n",
-      "           216,  2262,  2479,   175,  2602,   146,   153,  3623,    16,  4573,\n",
-      "           120, 11226,    16,   149,  2997,    84,    11, 14865,   120,   185,\n",
-      "          1833,  2589,   299,   194,  3163,  7013,   182,   149,  1456,    69,\n",
-      "            11,  7934, 10353,    18,     1,     2,     2,     2]],\n",
+      "token_ids          \n",
+      " tensor([[  0, 993, 149, 298,  31,   1, 850,  47,  18,  61,  40,  62, 304, 758,\n",
+      "          31,   1,   2,   2,   2,   2]], device='cuda:0') \n",
+      "\n",
+      "masked_token_ids   \n",
+      " tensor([[  0, 993, 149, 298,  31,   1, 850,  47,  18,   3,  40,   3, 304, 758,\n",
+      "          31,   1,   2,   2,   2,   2]], device='cuda:0') \n",
+      "\n",
+      "segment_ids        \n",
+      " tensor([[0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0]],\n",
       "       device='cuda:0') \n",
       "\n",
-      "masked_token_ids_batch\n",
-      " tensor([[    0, 12160,    18,   354,   312,  6076,   253,    16,   296,     3,\n",
-      "           971,     3,    77,    11,  8096,     3,   153,     3,  1002,    16,\n",
-      "            79,    11,   251,   948,   292,   146,   606,   120,   991,   153,\n",
-      "           253,    18,     1,    22,    18,   352,   373,   146,    77,    11,\n",
-      "           274,  1032,    16,   715,   636,    16,   161,   269,   146,   294,\n",
-      "             3,    16,   242,    79,     3,    90,    66,   871,   292,   484,\n",
-      "           146,   770,   183,   254,   360,   722,   995,   295,  1842,   298,\n",
-      "            18,     1,     2,     2,     2,     2,     2,     2,     2,     2,\n",
-      "             2,     2,     2,     2,     2,     2,     2,     2,     2,     2,\n",
-      "             2,     2,     2,     2,     2,     2,     2,     2,     2,     2,\n",
-      "             2,     2,     2,     2,     2,     2,     2,     2,     2,     2,\n",
-      "             2,     2,     2,     2,     2,     2,     2,     2,     2,     2,\n",
-      "             2,     2,     2,     2,     2,     2,     2,     2],\n",
-      "        [    0,   157,    11,   151,  1051,   146,  2277,   295,   153,  3370,\n",
-      "           146,   533,  3470,   146,  3080,    16,   242,     3,   120,    77,\n",
-      "            11,   760,    69,    11,     3,   153,  1375,   157,    11,   242,\n",
-      "            66,  2998,     3,   533,  3470,    31,     1,   924,    77,    11,\n",
-      "           259,   703,     3,  1524,    17,   151,     3,  1355,    16,    28,\n",
-      "           635,   532,     3,   166,     3,     3,     3,   183,   805,   811,\n",
-      "          9474,     3,   161,    26,   635,  8126,    16,   153,  4291,  7078,\n",
-      "           161, 12387,    66,   708,   216,     7,  1721,  8847,  3161,  5243,\n",
-      "           166,  7327,     7,  1830,   295,     3,  4939,     3,    69,    11,\n",
-      "           216,  2262,  2479,   175,     3,   146,   153,  3623,    16,     3,\n",
-      "           120, 11226,    16,     3,  2997,    84,    11, 14865,   120,   185,\n",
-      "          1833,  2589,   299,   194,  3163,  7013,   182,   149,  1456,    69,\n",
-      "            11,  7934, 10353,    18,     1,     2,     2,     2]],\n",
-      "       device='cuda:0') \n",
-      "\n",
-      "segment_ids           \n",
-      " tensor([[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-      "         0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-      "         1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-      "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-      "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-      "         0, 0, 0, 0, 0, 0, 0, 0],\n",
-      "        [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-      "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-      "         1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-      "         1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-      "         1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-      "         1, 1, 1, 1, 1, 0, 0, 0]], device='cuda:0') \n",
-      "\n",
-      "masked_token_batch    \n",
-      " tensor([[  21,  146,  251,  120,  830,  146,  360,  309,   11,  176, -100, -100,\n",
-      "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-      "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-      "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-      "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-      "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-      "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-      "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-      "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-      "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-      "         -100, -100, -100, -100, -100, -100, -100, -100],\n",
-      "        [4285,  120, 2347,  120,   12,   17,   13,  194, 4304,   16,  811, 1406,\n",
-      "          146,  216, 8703, 2602, 4573,  149, -100, -100, -100, -100, -100, -100,\n",
-      "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-      "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-      "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-      "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-      "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-      "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-      "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-      "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
+      "masked_tokens      \n",
+      " tensor([[  61,   62, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
       "         -100, -100, -100, -100, -100, -100, -100, -100]], device='cuda:0') \n",
       "\n",
-      "masked_position_batch \n",
-      " tensor([[  1,   5,   9,  11,  14,  15,  17,  50,  54,  68,   0,   0,   0,   0,\n",
-      "           0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-      "           0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-      "           0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-      "           0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-      "           0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-      "           0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-      "           0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-      "           0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-      "           0,   0],\n",
-      "        [ 17,  18,  24,  32,  42,  46,  52,  54,  55,  56,  59,  61,  77,  85,\n",
-      "          87,  94,  99, 103,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-      "           0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-      "           0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-      "           0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-      "           0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-      "           0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-      "           0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-      "           0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-      "           0,   0]], device='cuda:0') \n",
+      "masked_positions   \n",
+      " tensor([[ 9, 11,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
+      "          0,  0]], device='cuda:0') \n",
       "\n",
-      "attention_masks       \n",
-      " tensor([[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-      "         1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-      "         1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-      "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-      "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-      "         0, 0, 0, 0, 0, 0, 0, 0],\n",
-      "        [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-      "         1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-      "         1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-      "         1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-      "         1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-      "         1, 1, 1, 1, 1, 0, 0, 0]], device='cuda:0') \n",
+      "attention_masks    \n",
+      " tensor([[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0]],\n",
+      "       device='cuda:0') \n",
       "\n",
-      "is_next               \n",
-      " tensor([1, 0], device='cuda:0') \n",
+      "is_next            \n",
+      " tensor([1], device='cuda:0') \n",
       "\n"
      ]
     },
@@ -488,7 +380,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_6337/3482139302.py:3: UserWarning: Creating a tensor from a list of numpy.ndarrays is extremely slow. Please consider converting the list to a single numpy.ndarray with numpy.array() before converting to a tensor. (Triggered internally at ../torch/csrc/utils/tensor_new.cpp:245.)\n",
+      "/tmp/ipykernel_4506/268473973.py:3: UserWarning: Creating a tensor from a list of numpy.ndarrays is extremely slow. Please consider converting the list to a single numpy.ndarray with numpy.array() before converting to a tensor. (Triggered internally at ../torch/csrc/utils/tensor_new.cpp:245.)\n",
       "  lambda x: torch.tensor(x, device=DEVICE, dtype=torch.long),\n"
      ]
     }
@@ -505,15 +397,15 @@
     " masked_tokens,\n",
     " masked_positions,\n",
     " attention_masks,\n",
-    " is_next) = get_batch(\"train\", batch_size=2)\n",
+    " is_next) = get_batch(\"train\", batch_size=1)\n",
     "\n",
-    "print(\"token_ids             \\n\", token_ids, \"\\n\")\n",
-    "print(\"masked_token_ids_batch\\n\", masked_token_ids, \"\\n\")\n",
-    "print(\"segment_ids           \\n\", segment_ids, \"\\n\")\n",
-    "print(\"masked_token_batch    \\n\", masked_tokens, \"\\n\")\n",
-    "print(\"masked_position_batch \\n\", masked_positions, \"\\n\")\n",
-    "print(\"attention_masks       \\n\", attention_masks, \"\\n\")\n",
-    "print(\"is_next               \\n\", is_next, \"\\n\")"
+    "print(\"token_ids          \\n\", token_ids, \"\\n\")\n",
+    "print(\"masked_token_ids   \\n\", masked_token_ids, \"\\n\")\n",
+    "print(\"segment_ids        \\n\", segment_ids, \"\\n\")\n",
+    "print(\"masked_tokens      \\n\", masked_tokens, \"\\n\")\n",
+    "print(\"masked_positions   \\n\", masked_positions, \"\\n\")\n",
+    "print(\"attention_masks    \\n\", attention_masks, \"\\n\")\n",
+    "print(\"is_next            \\n\", is_next, \"\\n\")"
    ]
   },
   {
@@ -554,16 +446,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step 0: train loss 0.6928|9.6270,val loss 0.6920|9.6246\n",
-      "step 1000: train loss 0.5970|4.2181,val loss 0.6014|4.2174\n",
-      "step 2000: train loss 0.5663|2.5691,val loss 0.6037|2.7145\n",
-      "step 3000: train loss 0.5534|2.1582,val loss 0.5370|2.2313\n",
-      "step 4000: train loss 0.5051|2.0628,val loss 0.5473|1.9716\n",
-      "step 5000: train loss 0.5266|1.7663,val loss 0.5519|1.8573\n",
-      "step 6000: train loss 0.5026|1.7856,val loss 0.5492|1.7913\n",
-      "step 7000: train loss 0.5264|1.6461,val loss 0.4975|1.6434\n",
-      "step 8000: train loss 0.5231|1.6893,val loss 0.4930|1.5996\n",
-      "step 9000: train loss 0.4986|1.5564,val loss 0.4751|1.5910\n"
+      "step 0: train loss 0.7123|9.6134,val loss 0.7121|9.6099\n"
      ]
     }
    ],
