--- a/lm-from-scratch/notebooks/gpt_ma.ipynb
+++ b/lm-from-scratch/notebooks/gpt_ma.ipynb
@@ -8,13 +8,12 @@
    "source": [
     "import torch\n",
     "from lm_from_scratch.corpus.decision_corpus import DecisionCorpus\n",
-    "from lm_from_scratch.tokenizers.char_tokenizer import CharLevelTokenizer\n",
     "# from lm_from_scratch.models.gpt_ma import Gpt\n",
     "from lm_from_scratch.models.gpt_ma_2 import Gpt\n",
     "\n",
     "BATCH_SIZE = 64 # how many independent sequences will we process in parallel?\n",
     "MAX_LEN = 128 # what is the maximum context length for predictions?\n",
-    "MAX_ITERS = 10000\n",
+    "MAX_ITERS = 5000\n",
     "EVAL_INTERVAL = 1000\n",
     "LEARNING_RATE = 1e-3\n",
     "DEVICE = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
@@ -63,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,16 +116,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# data loading\n",
-    "def get_batch(split):\n",
+    "def get_batch(split, batch_size=BATCH_SIZE):\n",
     "    # generate a small batch of data of inputs x and targets y\n",
     "    data = train_data if split == 'train' else val_data\n",
     "\n",
-    "    doc_ix = torch.randint(len(data), (BATCH_SIZE,))\n",
+    "    doc_ix = torch.randint(len(data), (batch_size,))\n",
     "    doc_token_ix = []\n",
     "\n",
     "    for doc_i in doc_ix:\n",
@@ -138,6 +137,53 @@
     "\n",
     "    x, y = x.to(DEVICE), y.to(DEVICE)\n",
     "    return x, y\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[ 3545,   142,   149,  1006,  1205,     8,    80,     9,    26,   149,\n",
+       "            436,  2456,    12,  2458,   162,  2436,  1272,     8,    80,     9,\n",
+       "             26,    43,    14,    57,    53,    58,  1273,    26,  1128, 13838,\n",
+       "           1265,   311,  2705,   222,  1604,  1588,    12,  1081,   524,    12,\n",
+       "           1044,   179,   145,   595,   285,   142,   149,   261,   142,   249,\n",
+       "             12,    62,   340,   149,   751,   614,    14,   449,   214,  9892,\n",
+       "            299,   213,   145,  3545,   142,   149,  1006,    12,   214,   179,\n",
+       "            883,  1154,  2791,    12,   381,   145,   463,   247,    57,   306,\n",
+       "             17,   208,    57,   800,    19,   208,    62,   336,   212,   294,\n",
+       "            145,   453,   731,   296,   347,    73,     7,   255,   340,   145,\n",
+       "            681,   854,   551,   179,   149,   258,    65,     7,   268,   142,\n",
+       "           2724,     8,  8028,   276,  1696,     7,  2369,   412,   295,   145,\n",
+       "            560,    73,     7,   649,   116,    43,    14,    57]],\n",
+       "        device='cuda:0'),\n",
+       " tensor([[  142,   149,  1006,  1205,     8,    80,     9,    26,   149,   436,\n",
+       "           2456,    12,  2458,   162,  2436,  1272,     8,    80,     9,    26,\n",
+       "             43,    14,    57,    53,    58,  1273,    26,  1128, 13838,  1265,\n",
+       "            311,  2705,   222,  1604,  1588,    12,  1081,   524,    12,  1044,\n",
+       "            179,   145,   595,   285,   142,   149,   261,   142,   249,    12,\n",
+       "             62,   340,   149,   751,   614,    14,   449,   214,  9892,   299,\n",
+       "            213,   145,  3545,   142,   149,  1006,    12,   214,   179,   883,\n",
+       "           1154,  2791,    12,   381,   145,   463,   247,    57,   306,    17,\n",
+       "            208,    57,   800,    19,   208,    62,   336,   212,   294,   145,\n",
+       "            453,   731,   296,   347,    73,     7,   255,   340,   145,   681,\n",
+       "            854,   551,   179,   149,   258,    65,     7,   268,   142,  2724,\n",
+       "              8,  8028,   276,  1696,     7,  2369,   412,   295,   145,   560,\n",
+       "             73,     7,   649,   116,    43,    14,    57,    39]],\n",
+       "        device='cuda:0'))"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_batch(\"train\", batch_size=1)"
    ]
   },
   {
@@ -166,16 +212,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step 0: train loss 9.7944, val loss 9.7894\n",
-      "step 1000: train loss 1.4125, val loss 2.2427\n",
-      "step 2000: train loss 1.2409, val loss 2.0942\n",
-      "step 3000: train loss 1.1440, val loss 2.0273\n",
-      "step 4000: train loss 1.0818, val loss 2.0134\n",
-      "step 5000: train loss 1.0391, val loss 1.9939\n",
-      "step 6000: train loss 0.9791, val loss 1.9690\n",
-      "step 7000: train loss 0.9565, val loss 1.9643\n",
-      "step 8000: train loss 0.9414, val loss 1.9755\n",
-      "step 9000: train loss 0.9275, val loss 1.9793\n"
+      "step 0: train loss 9.7939, val loss 9.7938\n",
+      "step 1000: train loss 1.4232, val loss 2.2247\n",
+      "step 2000: train loss 1.2562, val loss 2.1277\n",
+      "step 3000: train loss 1.1425, val loss 2.0410\n",
+      "step 4000: train loss 1.0845, val loss 2.0107\n"
      ]
     }
    ],
@@ -223,14 +264,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "chambre criminelle de la Cour de cassation , composée en application de l ' article 567 - 1 - 1 du code de procédure pénale , des président et conseillers précités , après en avoir délibéré conformément à la loi , a rendu la présente décision . Vu l ' article 567 - 1 - 1 du code de procédure pénale : Après avoir examiné tant la recevabilité du recours que les pièces de procédure , la Cour de cassation constate qu ' il n ' existe , en l ' espèce , aucun moyen de nature à permettre l ' admission du pourvoi . EN CONSÉQUENCE , la Cour : DÉCLARE le pourvoi NON ADMIS ; Ainsi décidé par\n"
+      "chambre criminelle de la Cour de cassation , composée en application de l ' article 567 - 1 - 1 du code de procédure pénale , des président et conseillers\n"
      ]
     }
    ],
@@ -244,7 +285,10 @@
     "        # crop idx to the last max_len tokens\n",
     "        idx_cond = idx[:, -max_len:]\n",
     "        # get the predictions\n",
+    "        model.eval()\n",
     "        logits, loss = model(idx_cond)\n",
+    "        model.train()\n",
+    "        \n",
     "        # focus only on the last time step\n",
     "        logits = logits[:, -1, :] # becomes (B, C)\n",
     "        # apply softmax to get probabilities\n",
@@ -255,17 +299,14 @@
     "        idx = torch.cat((idx, idx_next), dim=1) # (B, T+1)\n",
     "    return idx\n",
     "\n",
-    "context = torch.zeros((1, 1), dtype=torch.long, device=DEVICE)\n",
     "\n",
-    "context = torch.tensor(\n",
-    "            tokenizer.encode(\"chambre criminelle de la Cour de cassation, compos\\u00e9e en application de l'article 567-1-1\").ids,\n",
-    "            dtype=torch.long,\n",
-    "            device=DEVICE)\n",
+    "token_ids = tokenizer.encode(\"chambre criminelle de la Cour de cassation, compos\\u00e9e en application de l'article 567-1-1\").ids\n",
+    "context = torch.tensor(token_ids, dtype=torch.long, device=DEVICE)\n",
     "\n",
     "print(tokenizer.decode(generate(model,\n",
     "                          context[None, :],\n",
     "                          max_len=MAX_LEN,\n",
-    "                          max_new_tokens=100)[0].tolist()))\n"
+    "                          max_new_tokens=10)[0].tolist()))\n"
    ]
   }
  ],
