--- a/lm-from-scratch/notebooks/gpt_sa.ipynb
+++ b/lm-from-scratch/notebooks/gpt_sa.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,20 +12,27 @@
     "from lm_from_scratch.models.gpt_sa import Gpt\n",
     "\n",
     "BATCH_SIZE = 32 # how many independent sequences will we process in parallel?\n",
-    "MAX_LEN = 8 # what is the maximum context length for predictions?\n",
+    "MAX_LEN = 64 # what is the maximum context length for predictions?\n",
     "MAX_ITERS = 10000\n",
     "EVAL_INTERVAL = 1000\n",
     "LEARNING_RATE = 1e-3\n",
     "DEVICE = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "EVAL_ITERS = 200\n",
     "\n",
-    "N_EMBEDDING = 32\n",
-    "HEAD_SIZE = 32"
+    "N_EMBEDDING = 128\n",
+    "HEAD_SIZE = 128"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load corpus & tokenizer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,8 +83,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Model training"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,23 +101,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step 0: train loss 5.0467, val loss 5.0479\n",
-      "step 1000: train loss 2.3923, val loss 2.4102\n",
-      "step 2000: train loss 2.2633, val loss 2.3046\n",
-      "step 3000: train loss 2.2288, val loss 2.2711\n",
-      "step 4000: train loss 2.2010, val loss 2.2440\n",
-      "step 5000: train loss 2.1862, val loss 2.2308\n",
-      "step 6000: train loss 2.1779, val loss 2.2296\n",
-      "step 7000: train loss 2.1748, val loss 2.2051\n",
-      "step 8000: train loss 2.1440, val loss 2.2112\n",
-      "step 9000: train loss 2.1495, val loss 2.2261\n"
+      "step 0: train loss 4.9886, val loss 4.9904\n",
+      "step 1000: train loss 2.0966, val loss 2.1776\n",
+      "step 2000: train loss 2.0254, val loss 2.1127\n",
+      "step 3000: train loss 1.9964, val loss 2.0762\n",
+      "step 4000: train loss 1.9710, val loss 2.0627\n",
+      "step 5000: train loss 1.9645, val loss 2.0616\n",
+      "step 6000: train loss 1.9556, val loss 2.0565\n",
+      "step 7000: train loss 1.9436, val loss 2.0492\n",
+      "step 8000: train loss 1.9430, val loss 2.0523\n",
+      "step 9000: train loss 1.9433, val loss 2.0543\n"
      ]
     }
    ],
@@ -140,6 +154,61 @@
     "    optimizer.zero_grad(set_to_none=True)\n",
     "    loss.backward()\n",
     "    optimizer.step()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chambre criminelle de la Cour de cassation, comnonders 'a\n"
+     ]
+    }
+   ],
+   "source": [
+    "from torch.nn import functional as F\n",
+    "\n",
+    "# generate from the model\n",
+    "def generate(model, idx, max_new_tokens, max_len):\n",
+    "    # idx is (B, T) array of indices in the current context\n",
+    "    for _ in range(max_new_tokens):\n",
+    "        # crop idx to the last max_len tokens\n",
+    "        idx_cond = idx[:, -max_len:]\n",
+    "        # get the predictions\n",
+    "        model.eval()\n",
+    "        logits, loss = model(idx_cond)\n",
+    "        model.train()\n",
+    "        \n",
+    "        # focus only on the last time step\n",
+    "        logits = logits[:, -1, :] # becomes (B, C)\n",
+    "        # apply softmax to get probabilities\n",
+    "        probs = F.softmax(logits, dim=-1) # (B, C)\n",
+    "        # sample from the distribution\n",
+    "        idx_next = torch.multinomial(probs, num_samples=1) # (B, 1)\n",
+    "        # append sampled index to the running sequence\n",
+    "        idx = torch.cat((idx, idx_next), dim=1) # (B, T+1)\n",
+    "    return idx\n",
+    "\n",
+    "context = torch.tensor(\n",
+    "            tokenizer.encode(\"chambre criminelle de la Cour de cassation, com\"),\n",
+    "            dtype=torch.long,\n",
+    "            device=DEVICE)\n",
+    "\n",
+    "print(tokenizer.decode(generate(model,\n",
+    "                                context[None, :],\n",
+    "                                max_len=MAX_LEN,\n",
+    "                                max_new_tokens=10)[0].tolist()))\n"
    ]
   }
  ],
