--- a/naat/notebooks/eda_gdrive_api.ipynb
+++ b/naat/notebooks/eda_gdrive_api.ipynb
@@ -195,10 +195,12 @@
     "# https://developers.google.com/drive/api/guides/search-files\n",
     "service = build('drive', 'v3', credentials=creds)\n",
     "\n",
+    "folder_lettre_interne_nl = \"1ejkPzITGEurNimytA0Xyk4e9FKVNLDSy\"\n",
+    "\n",
     "# Call the Drive v3 API\n",
     "results = service.files().list(\n",
     "    pageSize=20,\n",
-    "    q=\"'1ejkPzITGEurNimytA0Xyk4e9FKVNLDSy' in parents and mimeType = 'application/vnd.google-apps.folder'\",\n",
+    "    q=f\"'{folder_lettre_interne_nl}' in parents and mimeType = 'application/vnd.google-apps.folder'\",\n",
     "    fields=\"nextPageToken, files(id, name)\").execute()\n",
     "letter_folders = list(results.get('files', []))\n",
     "\n",
@@ -215,14 +217,17 @@
     "        q=f\"'{letter_folder['id']}' in parents and mimeType = 'application/vnd.google-apps.folder' and name = 'Affaires climatiques'\",\n",
     "        fields=\"nextPageToken, files(id, name)\").execute()\n",
     "    climate_folder = climate_res.get('files', [])\n",
+    "\n",
     "    for folder in climate_folder:\n",
     "        print(folder[\"name\"])\n",
     "        \n",
-    "        # copy in\n",
+    "        # search shortcut files in climate case folder\n",
     "        files = service.files().list(\n",
     "            pageSize=20,\n",
     "            q=f\"'{folder['id']}' in parents and mimeType = 'application/vnd.google-apps.shortcut'\",\n",
     "            fields=\"nextPageToken, files(id, name)\").execute().get('files', [])\n",
+    "        \n",
+    "        # copy shortcut files in destination folder\n",
     "        for file in files:\n",
     "            print(\"Affaires climatiques\", file[\"name\"])\n",
     "            file_metadata = {\n",
@@ -231,11 +236,13 @@
     "            }\n",
     "            service.files().copy(fileId=file[\"id\"], body=file_metadata).execute()\n",
     "\n",
-    "        # make shortcut in\n",
+    "        # search for files in climate case folder\n",
     "        files = service.files().list(\n",
     "            pageSize=20,\n",
     "            q=f\"'{folder['id']}' in parents and mimeType != 'application/vnd.google-apps.shortcut'\",\n",
     "            fields=\"nextPageToken, files(id, name)\").execute().get('files', [])\n",
+    "        \n",
+    "        # create shortcut file in destination folder\n",
     "        for file in files:\n",
     "            print(\"Affaires climatiques\", file[\"name\"])\n",
     "            create_short_cut(name=file[\"name\"], id=file[\"id\"], folder_id=cli_folder_target_id)\n",
@@ -247,6 +254,7 @@
     "        q=f\"'{letter_folder['id']}' in parents and mimeType = 'application/vnd.google-apps.folder' and name = 'Affaires environnementales'\",\n",
     "        fields=\"nextPageToken, files(id, name)\").execute()\n",
     "    env_folder = env_res.get('files', [])\n",
+    "    \n",
     "    for folder in env_folder:\n",
     "        print(folder[\"name\"])\n",
     "\n",
