--- a/lm-from-scratch/notebooks/bert.ipynb
+++ b/lm-from-scratch/notebooks/bert.ipynb
@@ -409,6 +409,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Building the model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -435,6 +442,13 @@
     "\n",
     "loss_fn_lm = torch.nn.CrossEntropyLoss(ignore_index=IGNORE_INDEX)\n",
     "loss_fn_clsf = torch.nn.CrossEntropyLoss() "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Training loop"
    ]
   },
   {
