--- a/lm-from-scratch/notebooks/gpt_ma.ipynb
+++ b/lm-from-scratch/notebooks/gpt_ma.ipynb
@@ -11,19 +11,22 @@
     "# from lm_from_scratch.models.gpt_ma import Gpt\n",
     "from lm_from_scratch.models.gpt_ma_2 import Gpt\n",
     "\n",
-    "BATCH_SIZE = 64 # how many independent sequences will we process in parallel?\n",
+    "# tokenizer & model parameters\n",
+    "VOCAB_SIZE = 15000\n",
+    "\n",
     "MAX_LEN = 128 # what is the maximum context length for predictions?\n",
+    "N_EMBEDDING = 384\n",
+    "NUM_HEAD = 6\n",
+    "HEAD_SIZE = N_EMBEDDING // NUM_HEAD\n",
+    "\n",
+    "# training parameters\n",
+    "BATCH_SIZE = 64 # how many independent sequences will we process in parallel?\n",
     "MAX_ITERS = 5000\n",
     "EVAL_INTERVAL = 1000\n",
     "LEARNING_RATE = 1e-3\n",
-    "DEVICE = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "EVAL_ITERS = 200\n",
     "\n",
-    "VOCAB_SIZE = 15000\n",
-    "N_EMBEDDING = 384\n",
-    "NUM_HEAD = 6\n",
-    "\n",
-    "HEAD_SIZE = N_EMBEDDING // NUM_HEAD"
+    "DEVICE = 'cuda' if torch.cuda.is_available() else 'cpu'"
    ]
   },
   {
